--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+nav {
+  text-align: center;
+}
+
+nav > a {
+  padding: 10px;
+  background-color: grey;
+}
+
+figure {
+  text-align: center;
+}
+
+section#featured-property > p{
+  text-align: center;
+  width: 800px;
+  margin: auto;
+  padding-bottom: 10px;
+}
+
+section#details > div{
+  float: left;
+}
+
+#details {
+  display: flex;
+  justify-content: space-between;
+  padding-left:10%;
+  padding-right:10%;
+  background: red;
+}
